# HormigasAIS-video-intelligence-checker

./: .env  .gitignore  AUDITORIA_HORMIGAS_2025.csv  BITACORA.md  EXTERNAL_INTERPRETER.md  Evolución-enjambre.md  LICENSE  LICENSE.sig  LICENSE_SaaS.md  LICENSE_SaaS_EN.md  LICENSE_SaaS_ES.md  README.md  TERMS_OF_SERVICE.md  actualizar_csv.py  adherir_enfriamiento.sh  agente_externo_gemini.py  ant_07_sentinel.py  changelog.md  check_connection.sh  collector_ant.py  config.human  cooling_governor_ant.py  corregir_infraestructura.sh  despertar_colonia.sh  despertar_soberano_total.sh  despertar_total.sh  ejecutar_3_hormigas.sh  ejecutar_ensayo_maestro.sh  ejecutar_soberania_solar.sh  emitter_ant.py  enfriador_maestro.py  enjambre_total_final.sh  generar_auditoria.sh  health_ant_l3.py  imagenesLBH.js  index.html  inicio_normal.sh  install.sh  lanzar.sh  lanzar_enjambre.sh  (+29 more)
.devcontainer/:  devcontainer.json
Dockerfile/: default.custom.yml
HormigasAIS--LBH-Protocol-/: LICENSE  LICENSE.sig  README.md
HormigasAIS-video-intelligence-checker/: CNAME
XOXO: reflections/: ZUMB-LOG  collaboration-cycle.json
adapter/: __init__.py  core.py  human_contract.py  json_lbh.py
adapter/bots/: bot_gateway.py
adapter/xoxo_lbh_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/: api.py  equeriments.txt  render.yaml  requirements.txt  run_backend.py  visualizador_lbh.py
backend/api/: api.py
backend/config/: config.yaml  settings.py  start_backend.py  xoxo_datetime.lua
backend/core/: logic.py
backend/from fpdf import FPDF/: checklist_text
backend/logs_binarios/: V-ANT-TEST-01_20251220_185245.lbh
boveda_seguridad/: auditoria_LBH_2025-12-31_15-31-00.txt
commercial_swarm/: lbh_validator_service.py  service_manifest.json
config/: status.lbh
contracts/config/: lbh.human
frontend/: changelog.html  index.html
modules/: modules_registry.json  video_intelligence.module.json
tests/: test_json_lbh.py  test_security.py
venv_xoxo/: pyvenv.cfg
(+24 files in other folders)
